--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
     <link rel="stylesheet" href="./css-files/home.css" />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <nav>
-          <a href="#">Home</a>
-          <a href="#">List</a>
-          <a href="#">About us</a>
-          <a href="#">Custom page</a>
-          <a href="#">Another</a>
-        </nav>
-        <img src="./images/868a9f7df2081e7e16e1709e3034fa5d.png" alt="logo" />
-      </header>
-    </div>
+    <div class="container"></div>
 
+    <script src="./src/header.js"></script>
     <script src="./src/home.js"></script>
   </body>
 </html>
