slider on big screens

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food and drink</title>
     <link rel="stylesheet" href="./css-files/home.css" />
+    <link rel="stylesheet" href="./css-files/header.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="header"></div>
+      <div class="slider">
+        <img
+          src="./images/left-arrow.png"
+          alt="left-arrow"
+          class="left-arrow"
+        />
+        <div class="boxes"></div>
+        <img
+          src="./images/right-arrow.png"
+          alt="left-arrow"
+          class="right-arrow"
+        />
+      </div>
+    </div>
 
     <script src="./src/header.js"></script>
     <script src="./src/home.js"></script>
