--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food and drink</title>
-    <link rel="stylesheet" href="./css-files/home.css" />
-    <link rel="stylesheet" href="./css-files/header.css" />
+    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/header.css" />
   </head>
   <body>
     <div class="container">
