--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./css/header.css" />
   </head>
   <body>
+    <div class="header"></div>
     <div class="container">
-      <div class="header"></div>
       <div class="slider">
         <img
           src="./images/left-arrow.png"
@@ -22,6 +22,12 @@
           alt="left-arrow"
           class="right-arrow"
         />
+      </div>
+      <div class="side-bar">
+        <div class="best-box">
+          <h3>The nearest breweries to Montenegro: <br /></h3>
+        </div>
+        <div class="facebook-feed"></div>
       </div>
     </div>
 
