--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="facebook-feed"></div>
       </div>
     </div>
-
+    <div class="overlay"></div>
+    <div class="modal"></div>
     <script src="./src/header.js"></script>
     <script src="./src/home.js"></script>
   </body>
