--- a/html-files/list.html
+++ b/html-files/list.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css-files/list.css">
-    <link rel="stylesheet" href="../css-files/footer.css">
-    <link rel="stylesheet" href="../css-files/footer.css">
+    <link rel="stylesheet" href="../css/list.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <script src="https://kit.fontawesome.com/190456128e.js" crossorigin="anonymous"></script>
     <title>List</title>
 </head>
 <body>
     
     <div class="main-wrapper container">
-
         <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore laborum, harum dolores eveniet atque exercitationem aperiam nobis quod possimus neque fugiat nemo maxime amet praesentium, nam quo iste voluptatum itaque.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae,tempora id quos dignissimos error architecto quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis animi labore molestias eaque impedit molestiae, harum doloribus alias! Iste, nobis exercitationem quas voluptatum quo optio sint ducimus velit assumenda perferendis.</p>
         </div>
-
     </div> 
 
-    <script src="./src/header.js"></script>
+    <script src="../src/header.js"></script>
     <script src="../src/footer.js"></script>
     <script src="../src/list.js"></script>
 
