top-rated container

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,20 +11,32 @@
   </head>
   <body>
     <div class="header"></div>
-    <div class="container">
-      <div class="slider">
-        <img
-          src="./images/left-arrow.png"
-          alt="left-arrow"
-          class="left-arrow"
-        />
-        <div class="boxes"></div>
-        <img
-          src="./images/right-arrow.png"
-          alt="left-arrow"
-          class="right-arrow"
-        />
+    <div class="bbb">
+      <div class="aaa">
+        <div class="container">
+          <div class="slider">
+            <img
+              src="./images/left-arrow.png"
+              alt="left-arrow"
+              class="left-arrow"
+            />
+            <div class="boxes"></div>
+            <img
+              src="./images/right-arrow.png"
+              alt="left-arrow"
+              class="right-arrow"
+            />
+          </div>
+        </div>
+        <div class="overlay"></div>
+        <div class="modal"></div>
+        <div class="container1">
+          <h2>The Largest:</h2>
+          <div class="top-rated-wraper"></div>
+          <button class="btn">Load more</button>
+        </div>
       </div>
+
       <div class="side-bar">
         <div class="best-box">
           <h3>The nearest breweries to Montenegro: <br /></h3>
@@ -30,8 +44,7 @@
         <div class="facebook-feed"></div>
       </div>
     </div>
-    <div class="overlay"></div>
-    <div class="modal"></div>
+
     <script src="./src/header.js"></script>
     <script src="./src/home.js"></script>
   </body>
