--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <script src="./src/header.js"></script>
-    <script src="./src/home.js"></script>
+    <script type="module" src="./src/header.js"></script>
+    <script type="module" src="./src/home.js"></script>
   </body>
 </html>
