--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
         <div class="best-box">
           <h3>The nearest breweries to Montenegro: <br /></h3>
         </div>
-        <div class="facebook-feed"></div>
-      </div>
+        <div class="facebook-feed">
+          <iframe
+         
+          class="test"
+         src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FBrewery-103093472379192&tabs&width=270&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+             ></iframe>
+        </div>
     </div>
 
     <script type="module" src="./src/header.js"></script>
