better style on home page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food and drink</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/footer.css">
   </head>
   <body>
     <div class="header"></div>
-    <div class="bbb">
-      <div class="aaa">
+    <div class="whole-page">
+      <div class="left-side">
         <div class="container">
           <div class="slider">
             <img
@@ -41,16 +44,14 @@
         <div class="best-box">
           <h3>The nearest breweries to Montenegro: <br /></h3>
         </div>
-        <div class="facebook-feed">
           <iframe
-         
-          class="test"
-         src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FBrewery-103093472379192&tabs&width=270&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+          class="iframe"
+          src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FBrewery-103093472379192&tabs&width=270&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
              ></iframe>
-        </div>
-    </div>
-
+             </div>
+    <div class="footer"></div>
     <script type="module" src="./src/header.js"></script>
     <script type="module" src="./src/home.js"></script>
+    <script src="./src/footer.js"></script>
   </body>
 </html>
