updated header, fixed dropdown list, fixed hamburger menu, updated list, updated footer

--- a/html/list.html
+++ b/html/list.html
@@ -16,6 +16,8 @@
 
     <div class="container">
 
+        <p id="selected-type"></p>
+
         <div class="search">
             <input type="search" id="search-inp" placeholder="search breweries">
         </div>
