--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Food and drink</title>
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"> <!-- added line -->
   </head>
   <body>
     <div class="header"></div>
@@ -45,7 +46,7 @@
       </div>
     </div>
 
-    <script src="./src/header.js"></script>
+    <script type="module" src="./src/header.js"></script> <!-- added (type="module") -->
     <script src="./src/home.js"></script>
   </body>
 </html>
