adding overflow hidden on side-bar

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food and drink</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/footer.css" />
   </head>
   <body>
     <div class="header"></div>
@@ -44,12 +44,17 @@
         <div class="best-box">
           <h3>The nearest breweries to Montenegro: <br /></h3>
         </div>
-          <iframe
+        <iframe
           class="iframe"
           src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FBrewery-103093472379192&tabs&width=270&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-             ></iframe>
-             </div>
+        ></iframe>
+      </div>
+    </div>
     <div class="footer"></div>
+    <script
+      src="https://kit.fontawesome.com/190456128e.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="./src/header.js"></script>
     <script type="module" src="./src/home.js"></script>
     <script src="./src/footer.js"></script>
