added animation on modal

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -19,34 +19,32 @@
         vero autem unde necessitatibus corrupti? Blanditiis quasi similique
         itaque quibusdam nostrum sequi ipsam!.
       </p>
+      <p></p>
       <p>
-        <it
-          >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo
-          placeat qui nulla, fuga assumenda blanditiis ipsa odit numquam? Quam
-          ullam commodi fugiat, nisi unde ducimus deleniti eligendi vel
-          accusamus enim.</it
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo placeat
+        qui nulla, fuga assumenda blanditiis ipsa odit numquam? Quam ullam
+        commodi fugiat, nisi unde ducimus deleniti eligendi vel accusamus enim.
         >
       </p>
     </div>
 
-    <!-- <h2 style="text-align:center">Our Team</h2> -->
     <div class="row">
-      <h2 style="text-align: center">Our Team</h2>
+      <h2>Our Team</h2>
       <div class="column">
         <div class="card">
-          <img src="../images/ant.jpg" style="width: 100%" />
+          <img src="../images/ant.jpg" alt="antonije" />
           <div class="container">
             <h2>Antonije</h2>
             <p class="title">CEO & Founder</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sequi
-              sit quisquam neque? Expedita, in vitae sapiente eveniet ipsam
-              alias repellendus reiciendis quibusdam delectus qui! Praesentium
-              aut recusandae voluptatem dolore?
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
+              rem voluptatibus dolores asperiores cum suscipit a veniam, numquam
+              corrupti porro ea quia cumque eveniet eos aperiam obcaecati
+              maiores quasi minus.
             </p>
             <a href="#">an@gmail.com</a>
             <a href="http://127.0.0.1:5500/html/contact-us.html">
-              <p><button class="button">Contact Us</button></p></a
+              <p class="button">Contact Us</p></a
             >
           </div>
         </div>
@@ -54,19 +52,19 @@
 
       <div class="column">
         <div class="card">
-          <img src="../images/err.webp" style="width: 100%" />
+          <img src="../images/err.webp" alt="eris" />
           <div class="container">
             <h2>Eris</h2>
             <p class="title">CEO & Founder</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-              dolor quisquam corrupti quo ut officia explicabo voluptate,
-              delectus eius repellendus est repudiandae! Possimus recusandae
-              odit delectus facilis distinctio nulla consequuntur!
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Distinctio neque ad, necessitatibus dolorem, odit aliquid atque
+              rerum impedit totam debitis illo excepturi magni temporibus
+              repudiandae ipsa, ullam laborum? Aspernatur, asperiores.
             </p>
             <a href="#">er@gmail.com </a>
             <a href="http://127.0.0.1:5500/html/contact-us.html">
-              <p><button class="button">Contact Us</button></p></a
+              <p class="button">Contact Us</p></a
             >
           </div>
         </div>
@@ -74,19 +72,19 @@
 
       <div class="column">
         <div class="card">
-          <img src="../images/em.jpg" style="width: 100%" />
+          <img src="../images/em.jpg" alt="emilija" />
           <div class="container">
             <h2>Emilija</h2>
             <p class="title">CEO & Founder</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates, illum! Libero praesentium labore cupiditate vitae
-              alias recusandae id placeat aliquam officiis molestiae
-              consequuntur ex deserunt numquam blanditiis, iusto facilis sunt.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
+              ipsum nisi aspernatur quidem soluta corrupti aperiam fugiat labore
+              quam aut totam placeat distinctio vero itaque animi. Maiores sequi
+              dignissimos accusamus!
             </p>
             <a href="#">em@gmail.com</a>
             <a href="http://127.0.0.1:5500/html/contact-us.html">
-              <p><button class="button">Contact Us</button></p></a
+              <p class="button">Contact Us</p></a
             >
           </div>
         </div>
