fixed header, footer, dropdown

--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -37,10 +37,10 @@
                     </div>
                     <div class="text-field">
                         <label>Tell us more</label>
-                        <textarea name="" id="" cols="30" rows="10" placeholder="type here..."></textarea>
+                        <textarea cols="30" rows="10" placeholder="type here..."></textarea>
                     </div>
                     <div class="checkbox">
-                        <input type="checkbox" name="" id="" >
+                        <input type="checkbox">
                         <label>Keep up to date with everything from DevelopersLab Brewery. Tick this box to receive emails featuring the latest news on our pubs, inns, breweries and beers. You can unsubscribe at any time.</label>
                     </div>
                     <div class="text-field sbm-btn">
