--- a/html/list.html
+++ b/html/list.html
@@ -26,15 +26,15 @@
             <form>
                 <div class="inp-option">
                     <input id="rb-name" type="radio" name="radiobtn" value="name" checked="checked">
-                    <label for="name">name</label>
+                    <label>name</label>
                 </div>
                 <div class="inp-option">
                     <input id="rb-type" type="radio" name="radiobtn" value="type">
-                    <label for="type">type</label>
+                    <label>type</label>
                 </div>
                 <div class="inp-option">
                     <input id="rb-city" type="radio" name="radiobtn" value="city">
-                    <label for="city">city</label>
+                    <label>city</label>
                 </div>
             </form>
         </div>
