--- a/html/list.html
+++ b/html/list.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../css/list.css">
     <link rel="stylesheet" href="../css/footer.css">
     <script src="https://kit.fontawesome.com/190456128e.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
     <title>List</title>
 </head>
 <body>
